src/test/deca/context/invalid/created/testPass2/redefFieldSupMeth.deca
// Description :
//    Test invalide : Opération d'addition sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 12: DoubleFieldDeclarationException: The field couldn't be declared in the subclass because it has already been defined in the superclass as a Method.

class A{
    int x(){}
}
class B extends A{
    float x;
}